--- a/src/index.ejs
+++ b/src/index.ejs
@@ -16,6 +16,7 @@
   <% } %>
 
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700|Raleway:300,400,500,600" rel="stylesheet">
   <meta charset="utf-8"/>
   <title>Fusion Starter</title>
 </head>
